...
    <!-- Description of the Support Noto settings options. -->
    <string name="support_noto_description">If you\'d like to make sure Noto remains maintained.</string>
    <!-- More options for folder, note, etc... -->
    <string name="more_options">More options</string>
    <!-- Options for multi-selected notes. -->
    <string name="options">Options</string>
    <string name="back">Back</string>
    <!-- Replacements for "Label filtering type". -->
    <string name="filtering">Filtering</string>
    <string name="layout">Layout</string>
    <string name="list">List</string>
    <!-- Label filtering mode -->
    <string name="inclusive">Inclusive</string>
    <!-- Inclusive filtering mode description -->
    <string name="inclusive_description">Filter notes that have <b>any</b> of the selected labels.</string>
    <!-- Label filtering mode -->
...
    <string name="access_date">Access date</string>
    <string name="creation_date">Creation date</string>
    <string name="manual">Manual</string>
    <string name="none">None</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="settings">Settings</string>
    <!-- The link of the source code of the project. -->
    <string name="source_code">Source code</string>
    <!-- Description of the "Source code" settings option. -->
    <string name="source_code_description">Noto is an open-source application, and the code is published on GitHub.</string>
    <!-- The link of the Telegram community of Noto. -->
    <string name="telegram_community">Telegram community</string>
...
    <string name="archive_folder">Archive folder</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="folder_options">Folder options</string>
    <string name="add_new_note_shortcut">New note shortcut</string>
    <string name="delete_folder_description">This action can\'t be undone and will delete the folder and all of its content permanently.</string>
    <string name="folder_title">Folder title</string>
    <!-- Folder color -->
    <string name="color">Color</string>
    <string name="delete_folder">Delete</string>
    <string name="delete_folder_confirmation">Are you sure you want to delete this folder?</string>
    <string name="empty_title">Title can\'t be empty.</string>
    <string name="folder_is_deleted">Folder has been deleted.</string>
...
    <!-- Text displaying how many occurrences of a word has been found using "Find in note" feature. Such as "2/11 Found".
        The First number is for the current displayed word, and the other number is the total count of words that have been found. -->
    <plurals name="words_found_count">
        <item quantity="one">%1$d Word • %2$d / %3$d Found</item>
        <item quantity="other">%1$d Words • %2$d / %3$d Found</item>
    </plurals>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <!-- Note's editor, opposite of Reading Mode. -->
    <string name="editor">Editor</string>
    <string name="create_note">Create note</string>
    <plurals name="delete_note">
        <item quantity="one">Delete note</item>
        <item quantity="other">Delete notes</item>
...
    <string name="no_notes_found_labels">No notes found containing the selected labels.</string>
    <!-- Text displayed when folder is empty, and containing 0 notes. Replacement for "No notes found". -->
    <string name="folder_is_empty">Folder is empty.</string>
    <string name="notes">Notes</string>
    <!-- The count of the selected notes that have been merged. -->
    <string name="notes_are_merged">%d Notes have been merged into new note.</string>
    <plurals name="note_is_archived">
        <item quantity="one">Note has been archived.</item>
        <item quantity="other">%d Notes have been archived.</item>
    </plurals>
    <plurals name="note_is_unarchived">
        <item quantity="one">Note has been unarchived.</item>
        <item quantity="other">%d Notes have been unarchived.</item>
...
        <item quantity="other">This action can\'t be undone and will delete the notes and their reminders permanently.</item>
    </plurals>
    <string name="reading_mode">Reading Mode</string>
    <string name="edit_note_reminder">Edit reminder</string>
    <string name="note_options">Note options</string>
    <!-- The count of the selected notes that have been deleted. -->
    <plurals name="note_is_deleted">
        <item quantity="one">Note has been deleted.</item>
        <item quantity="other">%d Notes have been deleted.</item>
    </plurals>
    <!-- The count of the selected notes that have been duplicated. -->
    <plurals name="note_is_duplicated">
        <item quantity="one">Note has been duplicated.</item>
        <item quantity="other">%d Notes have been duplicated.</item>
    </plurals>
    <string name="move_to">Move to…</string>
    <!-- Text displayed when moving notes between folders along with a progress indicator. -->
    <string name="moving_notes">Moving notes to %s</string>
...
