<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cool"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_bottom"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/library_item" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        style="@style/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/libraries">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_libraries_count"
                style="@style/SubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal"
                tools:text="7 Libraries"
                tools:textColor="@color/colorPrimary" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_place_holder"
        style="@style/PlaceholderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_normal"
        android:text="@string/no_libraries"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorBackground"
        app:fabAlignmentMode="end"
        app:fabAnimationMode="scale"
        app:fabCradleRoundedCornerRadius="@dimen/spacing_normal"
        app:hideOnScroll="true"
        app:menu="@menu/library_list_menu"
        app:navigationIcon="@drawable/ic_round_menu_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:contentDescription="@string/create_library"
        android:src="@drawable/ic_round_add_24"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/bab"
        app:tint="@color/colorBackground" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
