<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/base_dialog_fragment" />

        <RadioGroup
            android:id="@+id/rg_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_system_theme"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/system_theme" />

            <RadioButton
                android:id="@+id/rb_light_theme"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme" />

            <RadioButton
                android:id="@+id/rb_dark_theme"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />

            <RadioButton
                android:id="@+id/rb_transparent_theme"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transparent_theme" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:padding="@dimen/spacing_normal"
            android:text="@string/create_widget" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>